openwebrx (1.2.12) bullseye jammy; urgency=low

  * Added FAX decoder, tested on weather fax transmissions.
  * Added FAX background decoding service (not tested).
  * Fixed a minor JavaScript error on startup.
  * Optimized SSTV decoder code.

 -- Marat Fayzullin <luarvique@gmail.com>  Sat, 22 Apr 2023 16:12:00 +0000

openwebrx (1.2.11) bullseye jammy; urgency=low

  * Made receiver panel collapsible, to free screen estate.
  * Now tracking and displaying paths taken by APRS packets.
  * Added option to draw a frame around the receiver panel.
  * Added option to prefer direct APRS reports to relayed ones.
  * Added map option to turn off the colored squares.
  * Added 145.825MHz APRS frequency for the ISS repeater.
  * Fixed waterfall hangup when zooming at the edge of a band.
  * Fixed computing paths traversed by APRS packets.

 -- Marat Fayzullin <luarvique@gmail.com>  Tue, 4 Apr 2023 16:12:00 +0000

openwebrx (1.2.10) bullseye jammy; urgency=low

  * Added spectrum display, toggled with a receiver panel button.
  * Added a setting to change how opaque the user interface is.

 -- Marat Fayzullin <luarvique@gmail.com>  Sat, 25 Mar 2023 16:12:00 +0000

openwebrx (1.2.9) bullseye jammy; urgency=low

  * Fixed missing 'N' letters in RTTY and CW decoders output.
  * Fixed SSTV decoder getting stuck after receiving 2-3 images.
  * Added SSTV debug messages to the log.
  * Removed some unused SSTV frequencies from band plan.
  * Removed SSTV NFM mode, since either USB or can be used with NFM.
  * Multiple other small fixes and style changes.

 -- Marat Fayzullin <luarvique@gmail.com>  Sat, 11 Mar 2023 16:12:00 +0000

openwebrx (1.2.8) bullseye jammy; urgency=low

  * Added AIS vessel reporting, with the map and background service.
  * Added configurable URL for looking up vessels by their MMSIs.
  * Added Air and Marine service bands to the band plan.
  * Added more SSTV frequencies to the band plan.
  * Added US APRS frequency to the 2m band.