@@ -162,6 +162,7 @@ defaultConfig = PropertyLayer(
     google_maps_api_key="",
     map_position_retention_time=2 * 60 * 60,
     map_prefer_recent_reports=True,
+    map_ignore_indirect_reports=False,
     callsign_url="https://www.qrzcq.com/call/{}",
     vessel_url="https://www.vesselfinder.com/vessels/details/{}",
     usage_policy_url="policy",
