@@ -2,6 +2,7 @@ openwebrx (1.2.12) bullseye jammy; urgency=low
 
   * Added FAX decoder, tested on weather fax transmissions.
   * Added FAX background decoding service (not tested).
+  * Added option to ignore indirect APRS reports.
   * Fixed a minor JavaScript error on startup.
   * Optimized SSTV decoder code.
 
